@@ -24,6 +24,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix IPv6 support in UDP socket (uTP)
 	* fix mingw build issues
 	* increase max allowed outstanding piece requests from peers
 	* uTP performance improvement. only fast retransmit one packet at a time
